--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+a:hover {
+  color: rgb(153, 153, 153);
+}
+
+ul li {
+  list-style: none;
+}
+
+header {
+  background-color: black;
+}
+
+body {
+  font-family: "Rubik", sans-serif;
+}
+
+h1 {
   text-align: center;
+  margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-top {
   display: flex;
-  flex-direction: column;
+  max-width: 28%;
+  margin: auto;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-top: 20px;
+  padding-bottom: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container-search input {
+  border-radius: 8px;
+  padding: 8px;
+  border-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-bottom {
+  max-width: 25%;
+  margin: auto;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: space-around;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 20px;
+}
+
+.container-list ul li {
+  display: inline;
+  margin: 15px;
+}
+
+.container-cart img {
+  max-width: 30px;
+  color: white;
 }
